Training with label smoothing

--- a/src/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
+++ b/src/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
@@ -20,6 +20,8 @@ gradient_accumulation_steps: 6
 #   alpha: 16
 #   bias: none
 
+label_smoothing: 0.05
+
 num_train_epochs: 9
 
 # Every how many training steps to run the evaluation loop
