--- a/src/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
+++ b/src/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
@@ -26,7 +26,7 @@ fc_layer_reg_lambda: 0.05     # Unit rescaling, see "Generation inspection" note
 num_train_epochs: 9
 
 # Every how many training steps to run the evaluation loop
-logging_steps: 5
+logging_steps: 1500
 
 # Every how many training steps to save a model checkpoint
 save_steps: 1500
@@ -53,7 +53,7 @@ generation_max_length: 200
 evaluation_strategy: STEPS
 
 # How many steps to wait before evaluating the model - first few evaluations are very slow due to long generation length
-# eval_delay: 20000
+eval_delay: 20000
 
 # Use beam search during the evaluation step, needed for computing BLEU on validation data
 predict_with_generate: true
