Add glossary augmentation

--- a/src/cai_garland/data/dataset_prep.config/parallel_dataset_prep.yaml
+++ b/src/cai_garland/data/dataset_prep.config/parallel_dataset_prep.yaml
@@ -11,6 +11,7 @@ defaults:
     - context-embeddings-from-folios
     # - folio-registers
     # - dictionary
+    - glossary
   - processing: local-dask
   - override hydra/job_logging: colorlog
   - override hydra/hydra_logging: colorlog
