Tweak training settings

--- a/src/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
+++ b/src/cai_garland/training/train_nmt.config/training/basic_with_bleu.yaml
@@ -11,9 +11,13 @@ seed: 12345
 # per_device_eval_batch_size: 8
 # gradient_accumulation_steps: 4
 
-per_device_train_batch_size: 4
-per_device_eval_batch_size: 4
-gradient_accumulation_steps: 6
+# per_device_train_batch_size: 4
+# per_device_eval_batch_size: 4
+# gradient_accumulation_steps: 6
+
+per_device_train_batch_size: 2
+per_device_eval_batch_size: 2
+gradient_accumulation_steps: 12
 
 # lora:
 #   r: 8
